2003-11-20  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* lib/local.h: do not define HAVE_KP_DEFINE

	* lib/flinternal.h: test directly for X11 version here

	* lib/forms.c (fl_keyboard): 
	* lib/flcolor.c (fl_mapcolor, fl_dump_state_info): 
	* lib/xpopup.c (fl_addtopup): 
	* lib/clock.c (draw_clock): use proper ML_xxx macros instead of
	bogus names

2003-11-20  Angus Leeming  <angus.leeming@btopenworld.com>

	* lib/events.c:
	* lib/fldraw.c:
	* lib/forms.c:
	* lib/xpopup.c:
	* lib/xsupport.c:

	* image/image_fits.c:
	* image/image_gif.c:
	* image/image_jpeg.c:
	* image/image_replace.c:
	* image/image_tiff.c:
	* image/ps_core.c:
	* image/ps_draw.c:

	* image/image_fits.c:
	* image/image_gif.c:
	* image/image_jpeg.c:
	* image/image_replace.c:
	* image/image_tiff.c:
	* image/image_xwd.c:
	* image/ps_core.c:
	* image/ps_draw.c:

	* fdesign/fd_main.c: squash warnings about comparison of
	signed and unsigned variables. Only 'safe' warnings have been squashed.
	
2003-11-20  Angus Leeming  <angus.leeming@btopenworld.com>

	* lib/flsnprintf.c: remove unused variable 'credits'.

	* lib/flresource.c: remove line 'fl_context->xim;' as it is a
	statement with no effect.

	* lib/version.c: remove unused variable 'c'.

2003-11-20  Angus Leeming  <angus.leeming@btopenworld.com>

	* lib/flinternal.h: add declaration of fl_handle_form.
	Squash warnings about implicit declaration of the function when
	compiling lib/tabfolder.c.

	* gl/glcanvas.h: remove #ifdef HAVE_GL_GLX_H guard.
	Cruft from pre-autoconf days.
	Squash warnings about implicit declaration of the function when
	compiling gl/glcanvas.c

2003-11-20  Angus Leeming  <angus.leeming@btopenworld.com>

	* fd2ps/papers.c:
	* fd2ps/pscol.c:
	* fd2ps/psdraw.c:
	* fdesign/fd_control.c:
	* fdesign/fd_main.c:
	* fdesign/fd_printC.c:
	* fdesign/fd_spec.c:
	* fdesign/sp_dial.c:
	* image/image_marker.c:
	* image/image_tiff.c:
	* image/ps_core.c:
	* lib/cursor.c:
	* lib/flcolor.c: squash warnings about 'var may be uninitialized' when