@@ -33,6 +33,7 @@
 #include "GL/glx.h"
 #include "GL/gl.h"
 #include "include/forms.h"
+#include "gl/glcanvas.h"
 #include <stdlib.h>
 
 extern Window fl_glwincreate(int *, GLXContext *, int, int);
